--- a/app/assets/stylesheets/base/_config.scss
+++ b/app/assets/stylesheets/base/_config.scss
@@ -17,5 +17,11 @@ h1 {
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  line-height: 1.5em;
+  font-size: 2.5em;
   color: var(--primary);
+  @include underly(var(--primary));
+  @include breakpoint(phone-portrait) {
+    font-size: 1.8em;
+  }
 }
