--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,15 +1,9 @@
-#main-carousel {
-  height: 100%;
-}
-
-.carousel-inner,
 .carousel-item {
-  width:100%;
-  height: 100%;
-}
-
-#main-carousel .carousel-img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+  height: 65vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
